<resources>
    <string name="app_name">DesquaredProject</string>

    //Calculator Strings
        //numbers
        <string name="zero">0</string>
        <string name="one">1</string>
        <string name="two">2</string>
        <string name="three">3</string>
        <string name="four">4</string>
        <string name="five">5</string>
        <string name="six">6</string>
        <string name="seven">7</string>
        <string name="eight">8</string>
        <string name="nine">9</string>

        //symbols
        <string name="clear">C</string>
        <string name="divide">÷</string>
        <string name="multiply">×</string>
        <string name="plus">+</string>
        <string name="minus">-</string>
        <string name="plusMinus">+/-</string>
        <string name="dot">.</string>
        <string name="equals">=</string>
        <string name="backspace"> </string>
        <string name="displayValue"></string>

    //Converter Strings
    //From (Array)
    <string-array name="currenciesFrom">
        <item></item>
    </string-array>
    //To (Array)
    <string-array name="currenciesTo">
        <item></item>
    </string-array>

</resources>