<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CalculatorActivity">

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calculation"
        app:layout_constraintVertical_bias="0.9">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/clearBtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_margin="3dp"
                android:layout_weight="1.5"
                android:background="@drawable/button_shape"
                android:text="@string/clear"
                android:textColor="@color/textColor"
                android:textSize="18sp" />

            <ImageButton
                android:id="@+id/deleteBtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_margin="3dp"
                android:layout_weight="1.5"
                android:background="@drawable/button_shape"
                android:contentDescription="@string/backspace"
                app:srcCompat="@drawable/backspace"
                tools:ignore="SpeakableTextPresentCheck" />

            <Button
                android:id="@+id/divideBtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:background="@drawable/button_shape"
                android:text="@string/divide"
                android:textColor="@color/textColor"
                android:textSize="18sp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/sevenBtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:background="@drawable/button_shape"
                android:text="@string/seven"
                android:textColor="@color/textColor"
                android:textSize="18sp"
                app:backgroundTint="@color/lightGray" />

            <Button
                android:id="@+id/eightBtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:background="@drawable/button_shape"
                android:text="@string/eight"
                android:textColor="@color/textColor"
                android:textSize="18sp"
                app:backgroundTint="@color/lightGray" />

            <Button
                android:id="@+id/nineBtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:background="@drawable/button_shape"
                android:text="@string/nine"
                android:textColor="@color/textColor"
                android:textSize="18sp"
                app:backgroundTint="@color/lightGray" />

            <Button
                android:id="@+id/multiplyBtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:background="@drawable/button_shape"
                android:text="@string/multiply"
                android:textColor="@color/textColor"
                android:textSize="18sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/fourBtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:background="@drawable/button_shape"
                android:text="@string/four"
                android:textColor="@color/textColor"
                android:textSize="18sp"
                app:backgroundTint="@color/lightGray" />

            <Button
                android:id="@+id/fiveBtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:background="@drawable/button_shape"
                android:text="@string/five"
                android:textColor="@color/textColor"
                android:textSize="18sp"
                app:backgroundTint="@color/lightGray" />

            <Button
                android:id="@+id/sixBtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:background="@drawable/button_shape"
                android:text="@string/six"
                android:textColor="@color/textColor"
                android:textSize="18sp"
                app:backgroundTint="@color/lightGray" />

            <Button
                android:id="@+id/minusBtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:background="@drawable/button_shape"
                android:text="@string/minus"
                android:textColor="@color/textColor"
                android:textSize="18sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/oneBtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:background="@drawable/button_shape"
                android:text="@string/one"
                android:textColor="@color/textColor"
                android:textSize="18sp"
                app:backgroundTint="@color/lightGray" />

            <Button
                android:id="@+id/twoBtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:background="@drawable/button_shape"
                android:text="@string/two"
                android:textColor="@color/textColor"
                android:textSize="18sp"
                app:backgroundTint="@color/lightGray" />

            <Button
                android:id="@+id/threeBtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:background="@drawable/button_shape"
                android:text="@string/three"
                android:textColor="@color/textColor"
                android:textSize="18sp"
                app:backgroundTint="@color/lightGray" />

            <Button
                android:id="@+id/plusBtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:background="@drawable/button_shape"
                android:text="@string/plus"
                android:textColor="@color/textColor"
                android:textSize="18sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/zeroBtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_margin="3dp"
                android:layout_weight="2.1"
                android:background="@drawable/button_shape"
                android:text="@string/zero"
                android:textColor="@color/textColor"
                android:textSize="18sp"
                app:backgroundTint="@color/lightGray" />

            <Button
                android:id="@+id/dotBtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:background="@drawable/button_shape"
                android:text="@string/dot"
                android:textColor="@color/textColor"
                android:textSize="18sp" />

            <Button
                android:id="@+id/equalsBtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:background="@drawable/button_shape"
                android:text="@string/equals"
                android:textColor="@color/textColor"
                android:textSize="18sp"
                app:backgroundTint="@color/equals" />
        </TableRow>
    </TableLayout>

    <EditText
        android:id="@+id/calculation"
        android:layout_width="346dp"
        android:layout_height="wrap_content"
        android:maxHeight="100dp"
        android:layout_marginTop="24dp"
        android:autofillHints="false"
        android:inputType="none"
        android:longClickable="false"
        android:text="@string/displayValue"
        android:textAlignment="textEnd"
        android:textSize="32sp"
        app:backgroundTint="@color/equals"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        tools:ignore="LabelFor,SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/result"
        android:layout_width="341dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="112dp"
        android:autofillHints="false"
        android:inputType="none"
        android:longClickable="false"
        android:maxHeight="120dp"
        android:text="@string/displayValue"
        android:textAlignment="textEnd"
        android:textSelectHandle="@drawable/hide_selector"
        android:textSize="32sp"
        app:backgroundTint="@color/equals"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        tools:ignore="LabelFor,SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="CALCULATOR"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view"
        android:layout_width="0dp"
        android:layout_height="4dp"
        android:background="@color/darkGray"
        app:layout_constraintBottom_toTopOf="@+id/calculation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

</androidx.constraintlayout.widget.ConstraintLayout>